--- a/web/template-usuario.xhtml
+++ b/web/template-usuario.xhtml
@@ -27,7 +27,7 @@
                         <p:menu >
                             <p:menuitem value="Inicio" icon="ui-icon-home" />
                             <p:menuitem value="Registrar encuestas" icon="ui-icon-arrowrefresh-1-w" outcome="/Usuarios/encuesta.xhtml"/>
-                            <p:menuitem value="Informes estadisticos" icon="ui-icon-disk" />
+                            <p:menuitem value="Informes estadísticos" icon="ui-icon-disk" />
                             
                         </p:menu>
                     </h:form>
