--- a/web/aspecto/Edit.xhtml
+++ b/web/aspecto/Edit.xhtml
@@ -13,16 +13,16 @@
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{aspectoController.selected != null}" style="margin-bottom:10px">
                         <p:outputLabel value="#{bundle.Label_nombre}" for="nombre" />
-                        <p:inputText id="nombre" value="#{aspectoController.selected.nombre}" />
+                        <p:inputText id="nombre" value="#{aspectoController.selected.nombre}" required="true" requiredMessage="#{bundle.RequiredMessage}"/>
                         <p:outputLabel value="#{bundle.Criterio}" for="CRITERIOidCRITERIO" />
-                        <p:selectOneMenu id="CRITERIOidCRITERIO" value="#{aspectoController.selected.CRITERIOidCRITERIO}">
+                        <p:selectOneMenu id="CRITERIOidCRITERIO" value="#{aspectoController.selected.CRITERIOidCRITERIO}" required="true" requiredMessage="#{bundle.RequiredMessage}">
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{criterioController.itemsAvailableSelectOne}"
                                            var="CRITERIOidCRITERIOItem"
                                            itemValue="#{CRITERIOidCRITERIOItem}"/>
                         </p:selectOneMenu>
                         <p:outputLabel value="#{bundle.Estado}" for="ESTADOidESTADO" />
-                        <p:selectOneMenu id="ESTADOidESTADO" value="#{aspectoController.selected.ESTADOidESTADO}" >
+                        <p:selectOneMenu id="ESTADOidESTADO" value="#{aspectoController.selected.ESTADOidESTADO}" required="true" requiredMessage="#{bundle.RequiredMessage}">
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{estadoController.itemsAvailableSelectOne}"
                                            var="ESTADOidESTADOItem"
