--- a/web/cliente/Create.xhtml
+++ b/web/cliente/Create.xhtml
@@ -13,15 +13,17 @@
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{clienteController.selected != null}" style="margin-bottom:10px">
                         <p:outputLabel value="#{bundle.Label_nombre}" for="nombre" />
-                        <p:inputText id="nombre" value="#{clienteController.selected.nombre}" />
+                        <p:inputText id="nombre" value="#{clienteController.selected.nombre}" required="true" requiredMessage="#{bundle.RequiredMessage}"/>
                         <p:outputLabel value="#{bundle.Estado}" for="ESTADOidESTADO" />
-                        <p:selectOneMenu id="ESTADOidESTADO" value="#{clienteController.selected.ESTADOidESTADO}">
+                        <p:selectOneMenu id="ESTADOidESTADO" value="#{clienteController.selected.ESTADOidESTADO}" required="true" requiredMessage="#{bundle.RequiredMessage}">
+                            <f:selectItem itemLabel="Seleccione uno"/>
                             <f:selectItems value="#{estadoController.itemsAvailableSelectOne}"
                                            var="ESTADOidESTADOItem"
                                            itemValue="#{ESTADOidESTADOItem}"/>
                         </p:selectOneMenu>
                         <p:outputLabel value="#{bundle.Municipio}" for="MUNICIPIOidMUNICIPIO" />
-                        <p:selectOneMenu id="MUNICIPIOidMUNICIPIO" value="#{clienteController.selected.MUNICIPIOidMUNICIPIO}" >
+                        <p:selectOneMenu id="MUNICIPIOidMUNICIPIO" value="#{clienteController.selected.MUNICIPIOidMUNICIPIO}" required="true" requiredMessage="#{bundle.RequiredMessage}">
+                            <f:selectItem itemLabel="Seleccione uno"/>
                             <f:selectItems value="#{municipioController.itemsAvailableSelectOne}"
                                            var="MUNICIPIOidMUNICIPIOItem"
                                            itemValue="#{MUNICIPIOidMUNICIPIOItem}"/>
