--- a/web/parametrosMedicion/Edit.xhtml
+++ b/web/parametrosMedicion/Edit.xhtml
@@ -13,9 +13,9 @@
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{parametrosMedicionController.selected != null}" style="margin-bottom:10px">
                         <p:outputLabel value="#{bundle.Label_nombre}" for="nombre" />
-                        <p:inputText id="nombre" value="#{parametrosMedicionController.selected.nombre}" />
+                        <p:inputText id="nombre" value="#{parametrosMedicionController.selected.nombre}" required="true" requiredMessage="#{bundle.RequiredMessage}"/>
                         <p:outputLabel value="#{bundle.Estado}" for="ESTADOidESTADO" />
-                        <p:selectOneMenu id="ESTADOidESTADO" value="#{parametrosMedicionController.selected.ESTADOidESTADO}" >
+                        <p:selectOneMenu id="ESTADOidESTADO" value="#{parametrosMedicionController.selected.ESTADOidESTADO}" required="true" requiredMessage="#{bundle.RequiredMessage}">
                             <f:selectItems value="#{estadoController.itemsAvailableSelectOne}"
                                            var="ESTADOidESTADOItem"
                                            itemValue="#{ESTADOidESTADOItem}"/>
