--- a/web/servicioForense/Edit.xhtml
+++ b/web/servicioForense/Edit.xhtml
@@ -13,16 +13,16 @@
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{servicioForenseController.selected != null}" style="margin-bottom:10px">
                         <p:outputLabel value="#{bundle.Servicio_Forense}" for="nombre" />
-                        <p:inputText id="nombre" value="#{servicioForenseController.selected.nombre}"/>
+                        <p:inputText id="nombre" value="#{servicioForenseController.selected.nombre}" required="true" requiredMessage="#{bundle.RequiredMessage}"/>
                         <p:outputLabel value="#{bundle.Estado}" for="ESTADOidESTADO" />
-                        <p:selectOneMenu id="ESTADOidESTADO" value="#{servicioForenseController.selected.ESTADOidESTADO}" required="true" requiredMessage="#{bundle.EditServicioForenseRequiredMessage_ESTADOidESTADO}">
+                        <p:selectOneMenu id="ESTADOidESTADO" value="#{servicioForenseController.selected.ESTADOidESTADO}" required="true" requiredMessage="#{bundle.RequiredMessage}">
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{estadoController.itemsAvailableSelectOne}"
                                            var="ESTADOidESTADOItem"
                                            itemValue="#{ESTADOidESTADOItem}"/>
                         </p:selectOneMenu>
                         <p:outputLabel value="#{bundle.Grupo}" for="GRUPOidGRUPO" />
-                        <p:selectOneMenu id="GRUPOidGRUPO" value="#{servicioForenseController.selected.GRUPOidGRUPO}" required="true">
+                        <p:selectOneMenu id="GRUPOidGRUPO" value="#{servicioForenseController.selected.GRUPOidGRUPO}" required="true" requiredMessage="#{bundle.RequiredMessage}">
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{grupoController.itemsAvailableSelectOne}"
                                            var="GRUPOidGRUPOItem"
