--- a/web/template-admin.xhtml
+++ b/web/template-admin.xhtml
@@ -8,7 +8,7 @@
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <h:outputStylesheet name="resources/css/default.css"/>
-        
+        <title>SIESA</title>
         
     </h:head>
 
